# neurostore-text-extraction

./: .gitignore  .gitmodules  .keys.example  README  README.md  pyproject.toml  setup.py.old
.github/workflows/: test.yml
docs/: schema_metadata.md
evaluation/: README.md  evaluate_participant_demographics.py  framework.py  run_evaluation.py  run_pd_evaluation.py
evaluation/configs/: eval_config.yaml
evaluation/data/: nv_task_ground_truth.csv  participant_demographics_ground_truth.csv
evaluation/data/ns_pond_inputs/: README.md
evaluation/data/ns_pond_inputs/3XC7fFxU7Sn6/: identifiers.json
evaluation/data/ns_pond_inputs/455y7Qh5jgni/: identifiers.json
evaluation/data/ns_pond_inputs/4H46zmwJ7MNZ/: identifiers.json
evaluation/data/ns_pond_inputs/4qSDsMjUVBqR/: identifiers.json
evaluation/data/ns_pond_inputs/5CvtW7mrJoB6/: identifiers.json
evaluation/data/ns_pond_inputs/6wbX96vU7x6F/: identifiers.json
evaluation/data/ns_pond_inputs/834PWSjKgSGe/: identifiers.json
evaluation/data/ns_pond_inputs/8F8XpGLCrNW3/: identifiers.json
evaluation/data/ns_pond_inputs/CDmqqVyig8SL/: identifiers.json
evaluation/data/ns_pond_inputs/SqU7scxx8A2x/: identifiers.json
evaluation/data/ns_pond_inputs/dZVmVyVcZAk6/: identifiers.json
evaluation/data/ns_pond_inputs/pm8yJSgyfHpk/: identifiers.json
evaluation/results/task/: version_comparison.md
evaluation/scripts/: analyze_ground_truth.py  calculate_metrics.py  download_nv_task_annotations.py  download_participant_demographic_annotations.py  run_participant_demographics_evaluation.py  utils.py
ns_extract/: __init__.py  dataset.py
ns_extract/cli/: __init__.py  pipeline_config.example.yaml  run.py
ns_extract/pipelines/: __init__.py  api.py  base.py  data_structures.py  exceptions.py  normalize.py  utils.py
ns_extract/pipelines/contrasts/: __init__.py  model.py  prompts.py  schemas.py
ns_extract/pipelines/nv_task/: __init__.py  model.py  prompts.py  schemas.py
ns_extract/pipelines/participant_demographics/: model.py  prompts.py  schemas.py
ns_extract/pipelines/semantic_embeddings/: __init__.py  model.py
ns_extract/pipelines/tfidf/: __init__.py  model.py
ns_extract/pipelines/umls_disease/: __init__.py  model.py
ns_extract/pipelines/word_count/: model.py
ns_pipelines/: __init__.py  dataset.py  pipeline.py
ns_pipelines/base/: __init__.py  api.py  base.py
ns_pipelines/nv_task/: model.py  schemas.py
ns_pipelines/participant_demographics/: __init__.py  clean.py  model.py  prompts.py  run.py  schemas.py
ns_pipelines/umls_disease/: __init__.py  model.py
ns_pipelines/word_count/: __init__.py  model.py  run.py
pipelines/: dataset.py  pipeline.py
pipelines/participant_demographics/: prompts.py  run.py
pipelines/umls_disease/: run.py
pipelines/word_count/: __init__.py  run.py
scripts/: run_all.py  run_pipelines
tests/: conftest.py  test_cli.py  test_dataset.py  test_example_extractor.py  test_normalize.py  test_nv_task.py  test_participant_demographics.py  test_patient_study.py  test_semantic_embeddings.py  test_tfidf.py  test_umls_disease.py  test_word_count.py
tests/cassettes/: test_ParticipantDemographicsExtractor.yaml  test_TaskExtractor.yaml
tests/cassettes/test_nv_task/: test_TaskExtractor.yaml
tests/cassettes/test_participant_demographics/: test_ParticipantDemographicsExtraction.yaml  test_ParticipantDemographicsExtractor.yaml
tests/cassettes/test_semantic_embeddings/: test_GeneralAPIEmbeddingExtractor[abstract].yaml  test_GeneralAPIEmbeddingExtractor[full_text].yaml  test_GeneralAPIEmbeddingExtractor[title].yaml
tests/data/: pipeline_config.yaml
tests/example_pipelines/example_extractor/: model.py
tests/example_pipelines/patient_study/: model.py
tests/example_pipelines/word_count/: model.py
(+355 files in other folders)
