[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ns-extract"
authors = [{name = "James Kent", email = "jamesdkent21@gmail.com"}]
description = "A package for extracting text features from the NeuroStore database."
readme = "README.md"
keywords = ["neurostore", "neurosynth", "neuroimaging", "meta-analysis"]
license = {text = "BSD 3-Clause License"} 
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "numpy<2.0.0",
    "pyyaml",
    "scispacy",
    "spacy>=3.0.0",
    "en-core-sci-sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
    "tiktoken",
]


[project.optional-dependencies]
participant_demographics = [
    "pandas",
    "numpy",
    "pydantic",
    "publang @ git+https://github.com/adelavega/publang.git",
    "openai"
]
umls_disease = [
    "pandas",
    "numpy",
    "spacy",
    "scispacy",
    "tqdm",
]
word_count = [
    "pandas",
]

tests = [
    "pytest",
    "pytest-recording",
    "vcrpy",
    "flake8",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "ns_extract/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
